concord_examples/tests/ui/endpoint_block_response_removed.stderr
error: endpoint declarations must use `METHOD Name(...) -> Response { ... }` (or `METHOD Name -> Response { ... }`)
 --> tests/ui/endpoint_block_response_removed.rs:9:14
  |
9 |     GET Ping {
  |              ^
