concord_examples/tests/ui/endpoint_block_response_removed.rs
use concord_macros::api;

api! {
    client UiEndpointBlockResponseRemoved {
        scheme: https,
        host: "example.com",
    }

    GET Ping {
        -> Json<()>;
    }
}

fn main() {}
